--- a/src/components/homepage-components/CallToAction.css
+++ b/src/components/homepage-components/CallToAction.css
@@ -81,8 +81,6 @@
   align-content: center;
   justify-content: center;
 
-  font-family: "AvenirLTStd-Book";
-
   background-image: url("../../assets/images/promotion_bg_vertical.jpg");
   background-position: center center;
   background-size: cover;
@@ -101,24 +99,27 @@
 }
 
 #ctaTitleMobile {
-  font-size: 3.5vh;
+  font-size: 1.5em;
   text-align: center;
-  font-weight: 600;
+  font-weight: bold;
   font-family: "AvenirLTStd-Book";
 }
 
 #ctaDescMobile {
   text-align: center;
   margin-top: 10%;
-  font-size: 2vh;
+  font-size: 1em;
+  font-weight: lighter;
+  font-family: "AvenirLTStd-Book";
 }
 
 #ctaButtonMobile {
   margin-top: 2%;
   background-color: #79158f;
   padding: 15px 55px 15px 55px;
-  font-size: 2vh;
+  font-size: 1.125em;
   font-weight: 500;
+  font-family: "AvenirLTStd-Book";
 }
 
 #SignUpContainerMobile {
@@ -132,7 +133,7 @@
   padding-bottom: 30px;
   margin: 0;
   color: #79158f;
-  font-size: 1.2em;
+  font-size: 1.125em;
   font-family: "AvenirLTPro-Heavy";
 }
 
@@ -142,7 +143,7 @@
   padding-left: 40px;
   margin-left: 30px;
   font-weight: 100;
-  font-size: 2vh;
+  font-size: 1em;
   background-color: white;
   font-family: "AvenirLTStd-Book";
 }
