--- a/src/components/homepage-components/MessageOfTheDay.css
+++ b/src/components/homepage-components/MessageOfTheDay.css
@@ -11,11 +11,11 @@
 
 .motdStyleMobile {
   text-align: center;
-  padding-top: 10%;
+  padding-top: 5%;
   padding-bottom: 10%;
   margin: 0;
   color: #79158F;
-  font-size: 2.5vh;
+  font-size: 1.125em;
   font-weight: 580;
   font-family: "AvenirLTStd-Book";
 }
