> MAJOR CHANGES: 	- Added Edit Profile Functionality 	- Fixed AWS Identity Pool Bug
> MINOR CHANGES
	- Changed some styling on the register/login components
	- Removed some console warnings

Signed-off-by: Lyle Branzuela <lylebranz@gmail.com>

--- a/src/components/register-login-components/LoginForm.css
+++ b/src/components/register-login-components/LoginForm.css
@@ -46,7 +46,7 @@
 }
 
 #loginFormButton {
-  margin-top: 50px;
+  margin-top: 15px;
   padding: 20px 100px 20px 100px;
   font-size: 1vw;
 }
@@ -104,7 +104,7 @@
   margin-right: auto;
   margin-top: 2vh;
   background-color: #79158f;
-  padding-top: 1vh;
+  padding-top: 0.5vh;
   padding-bottom: 1vh;
   padding-left: 25%;
   padding-right: 25%;
@@ -112,7 +112,7 @@
   font-weight: 500;
 }
 .googleLogin {
-  margin-top: 50px;
+  margin-top: 0.5vh;
   height: 70px !important;
 }
 
