--- a/src/components/aboutpage-components/TeamSection.css
+++ b/src/components/aboutpage-components/TeamSection.css
@@ -37,28 +37,30 @@
   font-family: "AvenirLTPro-Heavy";
   color: #79158f;
   text-align: center;
-  font-size: 23px;
+  font-size: 1.5em;
 }
 #role {
   font-family: "AvenirLTStd-Book";
   color: #79158f;
   text-align: center;
-  font-size: 22px;
+  font-size: 1.3em;
 }
 
 #team-description {
   font-family: "AvenirLTStd-Book";
-  font-size: 17.8px;
+  font-size: 1em;
   padding-right: 50px;
   padding-left: 50px;
   padding-top: 10px;
   color: #5B5B5B; 
+  white-space: pre-line;
 }
 
 .teamSectionStyle a {
   font-family: "AvenirLTStd-Book";
   color: #79158f;
   padding-left: 50px;
-  font-size: 17.8px;
+  font-size: 1em;
+  white-space: pre-line;
 }
 
