--- a/src/components/aboutpage-components/TopContent.css
+++ b/src/components/aboutpage-components/TopContent.css
@@ -4,6 +4,7 @@
   text-align: center;
   margin-bottom: 70px;
   font-family: "AvenirLTPro-Heavy";
+  white-space: pre-line;
 }
 
 #about-paragraph {
@@ -13,6 +14,7 @@
   margin-right: 5%;
   font-family: "AvenirLTStd-Book";
   color: #5b5b5b;
+  white-space: pre-line;
 }
 
 .aboutContainer {
@@ -22,7 +24,8 @@
   position: relative;
   border-style: solid;
   justify-content: center;
-  width: 5000px;
+  width: 100vw;
+  white-space: pre-line;
 }
 
 #bigParagraph {
