--- a/src/components/for-practitioner-components/FeatureCarousel.css
+++ b/src/components/for-practitioner-components/FeatureCarousel.css
@@ -4,6 +4,15 @@
 }
 
 .featureCarouselStyle .carousel-indicators li {
+  background-color: #5b5b5b;
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.featureCarouselStyle .carousel-indicators .active {
   background-color: #79158f;
 }
 
