--- a/src/components/practitionerprofile-components/ImageCarousel.css
+++ b/src/components/practitionerprofile-components/ImageCarousel.css
@@ -5,6 +5,19 @@
   margin: 0 auto;
 }
 
+.pracPersonalCarousel .carousel-indicators li {
+  background-color: transparent;
+  border-radius: 100%;
+  height: 1.5vh;
+  width: 1.5vh;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.pracPersonalCarousel .carousel-indicators .active {
+  background-color: white;
+}
+
 .pracPersonalCarousel .carousel-item > img {
   width: 100%;
   max-height: 499px;
