--- a/src/components/aboutpage-components/ClientSection.css
+++ b/src/components/aboutpage-components/ClientSection.css
@@ -25,8 +25,8 @@
   white-space: pre-line;
 }
 
-@media (max-width: 900px){
-  #lightHeader{
+@media (max-width: 900px) {
+  #lightHeader {
     margin-left: -40%;
     margin-right: -40%;
     white-space: pre-line;
@@ -52,8 +52,8 @@
   white-space: pre-line;
 }
 
-@media (max-width: 900px){
-  #big-description{
+@media (max-width: 900px) {
+  #big-description {
     font-size: 20px;
     text-align: center;
     margin-left: -25%;
@@ -94,9 +94,17 @@ blockquote:before {
   white-space: pre-line;
 }
 
-@media (max-width: 900px){
-  #clientMessage{
+@media (max-width: 900px) {
+  #clientMessage {
     font-size: 22px;
     white-space: pre-line;
   }
+}
+
+.aboutContentP {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
